🎨 Use Java’s Predicate in reply visibility filter